...
        android:src="@drawable/baseline_fastfood_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_bmi_calculator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/calculator_fragment_label"
        android:textColorLink="#548239FF"
        android:textSize="32sp"
...
